# MyChat2

./: README.md
Server/GateServer/: CMakeLists.txt
Server/GateServer/src/: CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  Singleton.h  const.h  main.cpp
